--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LAB_WEEK_05</string>
-    <string name="image_placeholder">Image URL: %s</string>
+    <string name="cat_breed_placeholder">Cat breed: %s</string>
+    <string name="cat_breed_unknown">Cat breed: Unknown</string>
 </resources>
